--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h1>Work</h1>
         <div id="photos">
 
-            <a id="work-background" href="">
+            <a id="work-background" href="https://github.com/tobiadey/UnBolt" target=”_blank” >
                 <div  class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                        Supply Chain Tracker
@@ -68,7 +68,7 @@
                 </div>
             </a>
 
-            <a id="work-background" href="">
+            <a id="work-background" href="" target=”_blank”  >
                 <div class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                        LPL Grammer 
@@ -79,7 +79,7 @@
                 </div>
             </a>
             
-            <a id="work-background" href="">
+            <a id="work-background" href="https://adeytrends.herokuapp.com/#" target=”_blank” >
                 <div class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                         Adey Trends Website 
@@ -90,7 +90,8 @@
                 </div>
             </a>
             
-            <a id="work-background" href="">
+            <a id="work-background" href="https://drive.google.com/drive/folders/1qhP_x2qcGAHWq-
+            oYonbccOy5wkzFQJae?usp=sharing" target=”_blank” >
                 <div class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                        Facial Emotion Recognition
