--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 </div>
             </a>
             
-            <a id="work-background" href="https://drive.google.com/drive/folders/1qhP_x2qcGAHWq-
-            oYonbccOy5wkzFQJae?usp=sharing" target=”_blank” >
+            <a id="work-background" 
+            href="https://drive.google.com/drive/folders/1qhP_x2qcGAHWq-oYonbccOy5wkzFQJae" target=”_blank” >
                 <div class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                        Facial Emotion Recognition
