--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td id="navigation">
                     <a href="#work">Work</a>
                     <a href="#bio">About</a>
-                    <a href="https://medium.com/@tobiadey" target=”_blank”  >Blog</a>
+                    <!-- <a href="https://medium.com/@tobiadey" target=”_blank”  >Blog</a> -->
                     <a href="#contact">Contact</a>
                 </td>
             </tr>
