--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </a>
 
-            <a id="work-background" href="" target=”_blank”  >
+            <a id="work-background" href="https://github.com/tobiadey/Little-Programming-Language" target=”_blank”  >
                 <div class="animated jackInTheBox work-1" style="animation-delay:2.2s;">
                     <p>
                        LPL Grammer 
